--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
+    <header>かきくけこ</header>
     <main></main>
     <footer></footer>
 </body>
