--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <div class="m_kv">
       <div class="top_kv-img-wrap">
         <h2 class="top_kv-text">山口の休日を創る。</h2>
+        <h1 class="top_kv-text">山口の休日を創る。</h1>
       </div>
     </div>
     <main class="l_main"></main>
