--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
         
       </div>
     </div>
-    <main class="l_main"></main>
+    <main class="l_main">
+      <h2>山口に憩いを、サウナを</h2>
+    </main>
   </body>
 </html>
