--- a/index.html
+++ b/index.html
@@ -46,11 +46,10 @@
     <header class="l_header"></header>
     <div class="m_kv">
       <div class="top_kv-img-wrap">
-        
+        <h2>山口の休日を創る。</h2>
       </div>
     </div>
     <main class="l_main">
-      <h2>山口に憩いを、サウナを</h2>
     </main>
   </body>
 </html>
