--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       <div class="top_kv-img-wrap">
         <h2>山口の休日を創る。</h2>
         <h2>山口の休日を創る。</h2>
+        <h2>山口の休日を創る。</h2>
       </div>
     </div>
     <main class="l_main">
