--- a/index.html
+++ b/index.html
@@ -46,9 +46,15 @@
     <header class="l_header"></header>
     <div class="m_kv">
       <div class="top_kv-img-wrap">
-        <h2>山口の休日を創る。</h2>
-        <h2>山口の休日を創る。</h2>
-        <h2>山口の休日を創る。</h2>
+        <h2 class="top_kv-text">
+          <img
+            src="img/top/top_kv.png"
+            class="top_kv-text-img"
+            width="478"
+            height="480"
+            alt="山口の休日を創る"
+          />
+        </h2>
       </div>
     </div>
     <main class="l_main">
