--- a/construction-detail.html
+++ b/construction-detail.html
@@ -47,6 +47,8 @@
     <div class="m_kv">
       <div class="top_kv-img-wrap">
         <h2>山口の休日を創る。</h2>
+        <h2>山口の休日を創る。</h2>
+        <h2>山口の休日を創る。</h2>
       </div>
     </div>
     <main class="l_main">
