keke page-sauna commit

--- a/page-sauna.html
+++ b/page-sauna.html
@@ -129,26 +129,26 @@
                 width="960"
                 height="460"
                 class="sauna-custom_img"
-                alt="サウナ室内の写真">
+                alt="サウナルームの外観の写真">
             <img 
                 src="img/sauna/sauna_4.jpg"
                 width="960"
                 height="460"
                 class="sauna-custom_img"
-                alt="サウナ室内の写真">
+                alt="サウナ室内の写真2">
             <img 
                 src="img/sauna/sauna_5.jpg"
                 width="960"
                 height="460"
                 class="sauna-custom_img"
-                alt="サウナ室内の写真">
+                alt="サウナ室内の写真3">
           </div>
           <p class="sauna-custom_heading">自分好みに<br>セレクト・カスタマイズ</p>
-          <p class="sauna-custom_txt_upper">屋外用・屋内用や、<br>
+          <p class="sauna-custom_txt_upper">屋外用・屋内用や、<br class="u_dp-n">
             人数に合わせた大きさはもちろん、<br>
             デザインや熱源のセレクトも可能。
             </p>
-          <p class="sauna-custom_txt_lower">また、より自分好みにカスタマイズして<br>つくることのできるプランもございます。
+          <p class="sauna-custom_txt_lower">また、より自分好みにカスタマイズして<br class="u_dp-n">つくることのできるプランもございます。
             </p>
         </div>
       </section>
@@ -182,12 +182,11 @@
           <p class="sauna-price_content_note">※選ばれるデザイン・サイズによって価格が変わります<br>※情勢により、価格が変動することがございます</p>
         </div>
 
-
         <div class="sauna-price_img-box">
           <img src="img/sauna/sauna_7.jpg"
             width="704"
             height="498"
-          class="sauna-price_img_in"
+          class="sauna-price_img_in u_dp-n"
           alt="屋内用サウナルームの写真">
         </div>
       </section>
@@ -206,9 +205,15 @@
 
           <span class="sauna-contact_flow_row"></span>
 
+          <img src="img/sauna/sauna_7_pc.png"
+          width="704"
+          height="498"
+        class="sauna-price_img_in__pc"
+        alt="屋内用サウナルームの写真">
+
           <div class="sauna-contact_txt_wrapper">
             <p class="sauna-contact_upper">お問い合わせ内容は</p>
-            <p class="sauna-contact_middle">『実物を見てみたい』<br>『価格がわかる資料がほしい』<br>『具体的な打合せをしたい』<br>など。
+            <p class="sauna-contact_middle">『実物を見てみたい<span class="u_dp-n">』</span><span class="u_dp-n__sp">・</span><br class="u_dp-n"><span class="u_dp-n">『</span>価格がわかる資料がほしい<span class="u_dp-n">』</span><span class="u_dp-n__sp">・</span><br class="u_dp-n"><span class="u_dp-n">『</span>具体的な打合せをしたい』<br class="u_dp-n">など。
               </p>
             <p class="sauna-contact_lower">まずは、お気軽にお問合せください</p>
           </div>
@@ -220,9 +225,10 @@
             </a>
           </div>
       </section>
-
-      <div class="sauna-arrow"></div>
-      <p class="sauna-arrow_top">TOP</p>
+      <div class="u_dp-n">
+        <div class="sauna-arrow"></div>
+        <p class="sauna-arrow_top">TOP</p>
+      </div>
 
     </main>
 
