--- a/construction-detail.html
+++ b/construction-detail.html
@@ -49,38 +49,63 @@
       </div>
     </div>
     <main class="l_main">
+      <div class="construction-detail">
         <section class="construction-detail_container">
-            <div class="construction-detail-title">
-                <h2 class="construction-detail-tit">SHUNAN YAMAGUCHI 2022</h2>
-                <h3 class="construction-detail-sub-tit">山口県周南市A様の新築住宅</h3>
+          <div class="construction-detail-title">
+            <h2 class="construction-detail-tit">SHUNAN YAMAGUCHI 2022</h2>
+            <h3 class="construction-detail-sub-tit">山口県周南市A様の新築住宅</h3>
+          </div>
+          <div class="construction-detail_container_wrapper_sp">
+            <div class="construction-detail_container_sp">
+              <div class="construction-detail_flex-item-1">
+                <table class="construction-detail-table">
+                    <tbody>
+                      <tr>
+                        <th class="construction-detail-table-row1">敷地面積</th>
+                        <td class="construction-detail-table-row2">142.14㎡</td>
+                      </tr>
+                      <tr class="construction-detail-table-tr">
+                        <th class="construction-detail-table-row1">延床面積</th>
+                        <td class="construction-detail-table-row2">142.14㎡</td>
+                      </tr>
+                      <tr class="construction-detail-table-tr">
+                        <th class="construction-detail-table-row1">構造</th>
+                        <td class="construction-detail-table-row2">木造2階建4LDK</td>
+                      </tr>
+                      <tr class="construction-detail-table-tr">
+                        <th class="construction-detail-table-row1">項目</th>
+                        <td class="construction-detail-table-row2">緑豊か / 天然木 / 間接照明 / モダン / スタイリッシュ</td>
+                      </tr>
+                    </tbody>
+                </table>
+              </div>
+              <div class="construction-detail_flex-item-2">
+                <h2 class="construction-detail-consept-tit">物件コンセプト</h2>
+                <p class="construction-detail-consept-txt">緑豊かな環境で落ち着いたライフスタイルを楽しむ家</p>
+              </div>
+              <div class="construction-detail_flex-item-3">
+                <h2 class="construction-detail-point-tit">物件のこだわりポイント</h2>
+                <p class="construction-detail-point-txt">飽きのこないシンプルモダンな外観に、バルコニーや外観の窓の配置で、採光とデザイン性を両立させました。<br>
+                  白を基調とした内装に、木材の美しいアクセントが変化を添えています。飽きのこないシンプルモダンな外観に、バルコニーや外観の窓の配置で、採光とデザイン性を両立させました。<br>
+                  白を基調とした内装に、木材の美しいアクセントが変化を添えています。飽きのこないシンプルモダンな外観に、バルコニーや外観の窓の配置で、採光とデザイン性を両立させました。<br>
+                  白を基調とした内装に、木材の美しいアクセントが変化を添えています。飽きのこないシンプルモダンな外観に、バルコニーや外観の窓の配置で、採光とデザイン性を両立させました。白を基調とした内装に、木材の美しいアクセントが変化を添えています。</p>
+              </div>
             </div>
-            <table class="construction-detail-table">
-                <tbody>
-                  <tr>
-                    <th class="construction-detail-table-row1">敷地面積</th>
-                    <td class="construction-detail-table-row2">142.14㎡</td>
-                  </tr>
-                  <tr class="construction-detail-table-tr">
-                    <th class="construction-detail-table-row1">延床面積</th>
-                    <td class="construction-detail-table-row2">142.14㎡</td>
-                  </tr>
-                  <tr class="construction-detail-table-tr">
-                    <th class="construction-detail-table-row1">構造</th>
-                    <td class="construction-detail-table-row2">木造2階建4LDK</td>
-                  </tr>
-                  <tr class="construction-detail-table-tr">
-                    <th class="construction-detail-table-row1">項目</th>
-                    <td class="construction-detail-table-row2">緑豊か / 天然木 / 間接照明 / モダン / スタイリッシュ</td>
-                  </tr>
-                </tbody>
-              </table>
-            <h2 class="construction-detail-consept-tit">物件コンセプト</h2>
-            <p class="construction-detail-consept-txt">緑豊かな環境で落ち着いたライフスタイルを楽しむ家</p>
-            <h2 class="construction-detail-point-tit">物件のこだわりポイント</h2>
-            <p class="construction-detail-point-txt">飽きのこないシンプルモダンな外観に、バルコニーや外観の窓の配置で、採光とデザイン性を両立させました。<br>
-                白を基調とした内装に、木材の美しいアクセントが変化を添えています。飽きのこないシンプルモダンな外観に、バルコニーや外観の窓の配置で、採光とデザイン性を両立させました。<br>
-                白を基調とした内装に、木材の美しいアクセントが変化を添えています。飽きのこないシンプルモダンな外観に、バルコニーや外観の窓の配置で、採光とデザイン性を両立させました。<br>
-                白を基調とした内装に、木材の美しいアクセントが変化を添えています。飽きのこないシンプルモダンな外観に、バルコニーや外観の窓の配置で、採光とデザイン性を両立させました。白を基調とした内装に、木材の美しいアクセントが変化を添えています。</p>
+            <div class="construction-detail_img-detail-container">
+              <div class="construction-detail_img-detail_wrap">
+                <img
+                  src="img/works_sub/ws_7.jpg"
+                  alt="ws_7"
+                />
+              </div>
+              <div class="construction-detail_img-detail_wrap">
+                  <img
+                    src="img/works_sub/ws_8.jpg"
+                    alt="ws_8"
+                  />
+              </div>
+            </div>
+          </div>
         </section>
         <section class="construction-detail_img-container">
             <div class="construction-detail_img_wrap">
@@ -120,6 +145,7 @@
                 />
             </div>
         </section>
+      </div>
     </main>
   </body>
 </html>
