--- a/page-sauna.html
+++ b/page-sauna.html
@@ -213,8 +213,10 @@
 
           <div class="sauna-contact_txt_wrapper">
             <p class="sauna-contact_upper">お問い合わせ内容は</p>
-            <p class="sauna-contact_middle">『実物を見てみたい<span class="u_dp-n">』</span><span class="u_dp-n__sp">・</span><br class="u_dp-n"><span class="u_dp-n">『</span>価格がわかる資料がほしい<span class="u_dp-n">』</span><span class="u_dp-n__sp">・</span><br class="u_dp-n"><span class="u_dp-n">『</span>具体的な打合せをしたい』<br class="u_dp-n">など。
-              </p>
+            <p class="sauna-contact_middle">『実物を見てみたい・価格がわかる資料がほしい・具体的な打合せをしたい』など。</p>
+            <p class="sauna-contact_middle__sp">『実物を見てみたい』<br>『価格がわかる資料がほしい』<br>『具体的な打合せをしたい』<br>など。</p>
+
+
             <p class="sauna-contact_lower">まずは、お気軽にお問合せください</p>
           </div>
           </div>
